--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:lprhodes/homebridge-apple-tv.git"
+    "url": "git@github.com:ConnorDCrawford/homebridge-apple-tv.git"
   },
   "dependencies": {
     "chai": "^4.1.2",
     "github-version-checker": "^1.2.0",
     "homebridge-platform-helper": "1.1.3",
-    "node-appletv": "^1.0.5",
+    "node-appletv": "git+https://github.com/deanophilip/node-appletv.git",
     "prompt": "^1.0.0",
     "uuid": "^3.2.1"
   },
