--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "dependencies": {
     "chai": "^4.1.2",
-    "github-version-checker": "^1.2.0",
-    "homebridge-platform-helper": "1.1.3",
-    "node-appletv": "git+https://github.com/deanophilip/node-appletv.git",
+    "github-version-checker": "^2.2.0",
+    "homebridge-platform-helper": "^1.1.3",
+    "node-appletv": "git+https://github.com/ConnorDCrawford/node-appletv.git",
     "prompt": "^1.0.0",
     "uuid": "^3.2.1"
   },
