--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "homebridge": ">=0.2.0"
   },
   "author": {
-    "name": "lprhodes"
+    "name": "ConnorDCrawford"
   },
   "repository": {
     "type": "git",
